<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_white"
    android:maxWidth="200dp"
    android:padding="@dimen/space_large">

    <ImageView
        android:id="@+id/imvWinner"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_small"
        app:srcCompat="@drawable/ic_winner" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imvWinner"
        android:layout_marginBottom="@dimen/space_large"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:padding="@dimen/space_normal"
        android:text="@string/prompt_you_win"
        android:textSize="@dimen/font_larger" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMessage"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/space_small"
            android:layout_weight="1"
            android:background="@drawable/bg_yellow"
            android:text="@string/action_leaderboard"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/space_small"
            android:layout_weight="1"
            android:background="@drawable/bg_pink"
            android:text="@string/action_play_again"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
