<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    tools:context="com.goodlife.bullandcow.view.game.GameActivity">

    <TextView
        android:id="@+id/tvInputNumber"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_large"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="@dimen/space_normal"
        android:paddingRight="@dimen/space_normal"
        android:text="@string/you_guess"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvGuess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnCheckTheGuess"
        android:layout_below="@+id/tvInputNumber"
        android:layout_marginBottom="@dimen/space_large"
        android:layout_marginTop="@dimen/space_large"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvEmptyGuess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnCheckTheGuess"
        android:layout_below="@+id/tvInputNumber"
        android:layout_marginBottom="@dimen/space_large"
        android:layout_marginTop="@dimen/space_large"
        android:gravity="center"
        android:padding="@dimen/space_large"
        android:text="@string/message_empty_guess"
        android:textColor="@color/secondaryTextColor" />

    <Button
        android:id="@+id/btnCheckTheGuess"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/layout_keyboard"
        android:layout_marginBottom="@dimen/space_normal"
        android:layout_marginLeft="@dimen/space_normal"
        android:layout_marginRight="@dimen/space_normal"
        android:background="@drawable/bg_pink"
        android:text="@string/action_check_my_guess"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_normal" />

    <LinearLayout
        android:id="@+id/layout_keyboard"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNumber0"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0" />

        <Button
            android:id="@+id/btnNumber1"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1" />

        <Button
            android:id="@+id/btnNumber2"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="2" />

        <Button
            android:id="@+id/btnNumber3"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3" />

        <Button
            android:id="@+id/btnNumber4"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4" />

        <Button
            android:id="@+id/btnNumber5"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5" />

        <Button
            android:id="@+id/btnNumber6"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6" />

        <Button
            android:id="@+id/btnNumber7"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7" />

        <Button
            android:id="@+id/btnNumber8"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8" />

        <Button
            android:id="@+id/btnNumber9"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/KeyboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:text="C" />
    </LinearLayout>

</RelativeLayout>
